--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
-server.port=8080
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.prefix: /
 spring.mvc.view.suffix: .jsp
+spring.jpa.hibernate.ddl-auto=create
+spring.messages.basename=validation
+
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
